ardupilot works in docker but without poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,6 @@ gnureadline = "^8.1.2"
 billiard = "^4.0.0"
 numpy = "^1.23.1"
 pyparsing = "^3.0.9"
-MAVProxy = "^1.8.50"
+MAVProxy = "1.8.50"
 matplotlib = "^3.5.2"
 opencv-python = "^4.6.0"
